endpoints paths refactoring
